-before applying classifier

--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "2  <p>Has anyone got experience creating <strong>...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "2  80             air"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "2  120                           sql asp.net sitemap"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "2                           sql asp.net sitemap  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "2                            [sql, asp.net, sitemap]  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "['c#', 'java', 'javascript']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "2                            [sql, asp.net, sitemap]  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,11 +849,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined_df.apply(lambda x: delete_uncommon_tags(x))"
+    "joined_df['Tags'] = joined_df['Tags'].apply(lambda x: delete_uncommon_tags(x))\n",
+    "joined_df['Tags'] = joined_df['Tags'].apply(lambda x: x if len(x)>0 else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_df = joined_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_df.dropna(subset = ['Tags'], inplace=True)\n",
+    "joined_df.drop(columns = ['index', 'Id', 'Score'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(63167, 3)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "token = nltk.tokenize.ToktokTokenizer()\n",
+    "words = token.tokenize(joined_df['Body'][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    clean_text = text.lower()\n",
+    "    clean_text = BeautifulSoup(clean_text, 'html.parser').get_text()\n",
+    "\n",
+    "    clean_text = re.sub(r'\\s+', ' ', clean_text)\n",
+    "    clean_text = re.sub(r'[^\\w\\s]', '', clean_text)\n",
+    "\n",
+    "    return clean_text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df = joined_df\n",
+    "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: clean_text(x))\n",
+    "cleaned_df['Body'] = cleaned_df['Body'].apply(lambda x: clean_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tags = [tag for tag_list in skata['Tags'] for tag in tag_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(all_tags))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmatizer = nltk.WordNetLemmatizer()\n",
+    "\n",
+    "def word_lemmatizer(text):\n",
+    "    text = text.split()\n",
+    "    lemmatized = []\n",
+    "    for word in text:\n",
+    "        x = lemmatizer.lemmatize(word, pos = 'v')\n",
+    "        lemmatized.append(x)\n",
+    "    \n",
+    "    return ' '.join(map(str, lemmatized))\n",
+    "\n",
+    "# should be improved with position tags!!\n",
+    "\n",
+    "def remove_stopwords(text):\n",
+    "    text = text.split()\n",
+    "    all_stopwords = set(nltk.corpus.stopwords.words(\"english\"))\n",
+    "    cleaned = []\n",
+    "    \n",
+    "    for word in text:\n",
+    "        if word not in all_stopwords:\n",
+    "            cleaned.append(word)\n",
+    "\n",
+    "    return ' '.join(map(str, cleaned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: clean_text(x))\n",
+    "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: word_lemmatizer(x))\n",
+    "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: remove_stopwords(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df['Body'] = cleaned_df['Body'].apply(lambda x: clean_text(x))\n",
+    "cleaned_df['Body'] = cleaned_df['Body'].apply(lambda x: word_lemmatizer(x))\n",
+    "cleaned_df['Body'] = cleaned_df['Body'].apply(lambda x: remove_stopwords(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#If you want to write pdf, better unlist the tag strings because there is some problem with loading\n",
+    "cleaned_df['Tags'] = cleaned_df['Tags'].apply(lambda tags: ' '.join(tags))\n",
+    "cleaned_df.to_csv('../Dataset/Cleaned_Dataset.csv', index = False, encoding = 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.2 This section includes the creation of a baseline model. First is going to be used a classical NLP Method towards feature extraction and then a standard classifier that is goint to be trained and evaluated on top of the extracted features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "#when loading the dataframe, put the tags again on a list of strings\n",
+    "cleaned_df = pd.read_csv('../Dataset/Cleaned_Dataset.csv', encoding = 'utf-8')\n",
+    "cleaned_df['Tags'] = cleaned_df['Tags'].apply(lambda tag: tag.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#make sure that we still have 100 distinct tags and the dataframe was loaded correctly\n",
+    "all_tags = []\n",
+    "\n",
+    "for tag_list in cleaned_df['Tags']:\n",
+    "    for tag in tag_list:\n",
+    "        all_tags.append(tag)\n",
+    "\n",
+    "print(len(set(all_tags)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df['Total'] = cleaned_df['Title'] + ' ' + cleaned_df['Body']\n",
+    "X = cleaned_df['Total'].astype(str)\n",
+    "Y = cleaned_df['Tags']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             [svn]\n",
+       "1    [sql, asp.net]\n",
+       "2       [algorithm]\n",
+       "Name: Tags, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    good branch merge tutorials tortoisesvn really...\n",
+       "1    aspnet site map anyone get experience create s...\n",
+       "2    function create color wheel something ive pseu...\n",
+       "Name: Total, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "\n",
+    "mlb = MultiLabelBinarizer()\n",
+    "Y = mlb.fit_transform(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(max_features=1000, token_pattern=r'(?u)\\S\\S+') #maybe leave it as default later on\n",
+    "\n",
+    "X_tfidf = vectorizer.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_tfidf, Y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50533, 1000) (12634, 1000) (50533, 100) (12634, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape, X_test.shape, Y_train.shape, Y_test.shape)"
    ]
   }
  ],
