--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -940,35 +940,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_tags = [tag for tag_list in skata['Tags'] for tag in tag_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(all_tags))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1070,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1093,7 @@
        "Name: Total, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,18 +1129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X_tfidf, Y, test_size=0.2, random_state=0)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_tfidf, Y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1182,6 +1153,100 @@
    ],
    "source": [
     "print(X_train.shape, X_test.shape, Y_train.shape, Y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaccard Similarity Score:  0.39991557173763914\n",
+      "ROC-AUC Score:  0.7138178201283213\n",
+      "Hamming Loss:  0.011098622763970238\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.metrics import jaccard_score, roc_auc_score, hamming_loss\n",
+    "\n",
+    "logreg_classifier = LogisticRegression(max_iter=1000, random_state = 42)\n",
+    "classifier = OneVsRestClassifier(logreg_classifier)\n",
+    "\n",
+    "classifier.fit(X_train,Y_train)\n",
+    "\n",
+    "Y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "jaccard = jaccard_score(Y_test, Y_pred, average = 'samples')\n",
+    "print(\"Jaccard Similarity Score: \", jaccard * 100)\n",
+    "roc_auc = roc_auc_score(Y_test, Y_pred, average = 'samples')\n",
+    "print(\"ROC-AUC Score: \", roc_auc * 100)\n",
+    "hamming_loss_val = hamming_loss(Y_test, Y_pred)\n",
+    "print(\"Hamming Loss: \", hamming_loss_val * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier:  LogisticRegression(max_iter=1000, random_state=42)\n",
+      "Jaccard Similarity Score:  39.991557173763916\n",
+      "ROC-AUC Score:  71.38178201283213\n",
+      "Hamming Loss:  1.1098622763970238\n",
+      "\n",
+      "\n",
+      "\n",
+      "Classifier:  MultinomialNB()\n",
+      "Jaccard Similarity Score:  12.679146219196873\n",
+      "ROC-AUC Score:  56.741412094668675\n",
+      "Hamming Loss:  1.4457812252651576\n",
+      "\n",
+      "\n",
+      "\n",
+      "Classifier:  LinearSVC()\n",
+      "Jaccard Similarity Score:  44.6092554482613\n",
+      "ROC-AUC Score:  73.93438208673385\n",
+      "Hamming Loss:  1.0656957416495172\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#will maybe check on Random Forest also, takes a bit longer to run\n",
+    "#maybe also add F1-Score(average='weighted')\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.metrics import jaccard_score, roc_auc_score, hamming_loss\n",
+    "\n",
+    "for base_classifier in [LogisticRegression(max_iter=1000, random_state=42), MultinomialNB(), LinearSVC()]:\n",
+    "    print(\"Classifier: \", base_classifier)\n",
+    "    \n",
+    "    classifier = OneVsRestClassifier(base_classifier)\n",
+    "    classifier.fit(X_train, Y_train)\n",
+    "    Y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "    jaccard = jaccard_score(Y_test, Y_pred, average = 'samples')\n",
+    "    print(\"Jaccard Similarity Score: \", jaccard * 100)\n",
+    "    roc_auc = roc_auc_score(Y_test, Y_pred, average = 'samples')\n",
+    "    print(\"ROC-AUC Score: \", roc_auc * 100)\n",
+    "    hamming_loss_val = hamming_loss(Y_test, Y_pred)\n",
+    "    print(\"Hamming Loss: \", hamming_loss_val * 100)\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
