improvement on lemmatization & cleaning

--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "2  <p>Has anyone got experience creating <strong>...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "2  80             air"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "2  120                           sql asp.net sitemap"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "2                           sql asp.net sitemap  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "2                            [sql, asp.net, sitemap]  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "['c#', 'java', 'javascript']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "2                            [sql, asp.net, sitemap]  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "(63167, 3)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,22 +920,21 @@
     "def clean_text(text):\n",
     "    clean_text = text.lower()\n",
     "    clean_text = BeautifulSoup(clean_text, 'html.parser').get_text()\n",
+    "    clean_text = re.sub(r\"what's\", \"what is \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'s\", \" \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'ve\", \" have \", clean_text)\n",
+    "    clean_text = re.sub(r\"can't\", \"can not \", clean_text)\n",
+    "    clean_text = re.sub(r\"n't\", \" not \", clean_text)\n",
+    "    clean_text = re.sub(r\"i'm\", \"i am \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'re\", \" are \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'d\", \" would \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'ll\", \" will \", clean_text)\n",
+    "    clean_text = re.sub(r\"\\'scuse\", \" excuse \", clean_text)\n",
     "\n",
     "    clean_text = re.sub(r'\\s+', ' ', clean_text)\n",
     "    clean_text = re.sub(r'[^\\w\\s]', '', clean_text)\n",
     "\n",
     "    return clean_text.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_df = joined_df\n",
-    "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: clean_text(x))\n",
-    "cleaned_df['Body'] = cleaned_df['Body'].apply(lambda x: clean_text(x))"
    ]
   },
   {
@@ -971,9 +970,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import wordnet\n",
+    "\n",
+    "lemmatizer = nltk.WordNetLemmatizer()\n",
+    "\n",
+    "#to look further on it\n",
+    "def get_wordnet_pos(pos_tag):\n",
+    "    \"\"\"Map POS tag to first character used by WordNet lemmatizer\"\"\"\n",
+    "    if pos_tag.startswith('J'):\n",
+    "        return wordnet.ADJ\n",
+    "    elif pos_tag.startswith('V'):\n",
+    "        return wordnet.VERB\n",
+    "    elif pos_tag.startswith('N'):\n",
+    "        return wordnet.NOUN\n",
+    "    elif pos_tag.startswith('R'):\n",
+    "        return wordnet.ADV\n",
+    "    else:\n",
+    "        return wordnet.NOUN  # Default to NOUN if no match\n",
+    "\n",
+    "def word_lemmatizer(text):\n",
+    "    text = nltk.word_tokenize(text)  # Tokenize text into words\n",
+    "    tagged_text = nltk.pos_tag(text)  # Perform part-of-speech tagging\n",
+    "    lemmatized = []\n",
+    "    \n",
+    "    for word, pos in tagged_text:\n",
+    "        pos = get_wordnet_pos(pos)\n",
+    "        x = lemmatizer.lemmatize(word, pos=pos)\n",
+    "        lemmatized.append(x)\n",
+    "    \n",
+    "    return ' '.join(lemmatized)\n",
+    "\n",
+    "def remove_stopwords(text):\n",
+    "    text = text.split()\n",
+    "    all_stopwords = set(nltk.corpus.stopwords.words(\"english\"))\n",
+    "    cleaned = []\n",
+    "    \n",
+    "    for word in text:\n",
+    "        if word not in all_stopwords:\n",
+    "            cleaned.append(word)\n",
+    "\n",
+    "    return ' '.join(map(str, cleaned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('wordnet') #downloads the wordnet data\n",
+    "nltk.download('punkt') #this is for using word_tokenize\n",
+    "nltk.download('averaged_perceptron_tagger') #this is to use pos_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df = joined_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\papch\\miniconda3\\lib\\site-packages\\bs4\\__init__.py:435: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: clean_text(x))\n",
     "cleaned_df['Title'] = cleaned_df['Title'].apply(lambda x: word_lemmatizer(x))\n",
@@ -982,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,11 +1070,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#If you want to write pdf, better unlist the tag strings because there is some problem with loading\n",
+    "#If you want to write csv, better unlist the tag strings because there is some problem with loading\n",
     "cleaned_df['Tags'] = cleaned_df['Tags'].apply(lambda tags: ' '.join(tags))\n",
     "cleaned_df.to_csv('../Dataset/Cleaned_Dataset.csv', index = False, encoding = 'utf-8')"
    ]
