created two distinct features - better results

--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1124,18 +1124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df['Total'] = cleaned_df['Title'] + ' ' + cleaned_df['Body']\n",
-    "X = cleaned_df['Total'].astype(str)\n",
+    "X1 = cleaned_df['Title'].astype(str)\n",
+    "X2 = cleaned_df['Body'].astype(str)\n",
     "Y = cleaned_df['Tags']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,30 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    good branch merge tutorials tortoisesvn really...\n",
-       "1    aspnet site map anyone get experience create s...\n",
-       "2    function create color wheel something ive pseu...\n",
-       "Name: Total, dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,20 +1170,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "vectorizer = TfidfVectorizer(max_features=1000, token_pattern=r'(?u)\\S\\S+') #maybe leave it as default later on\n",
+    "vectorizer_X1 = TfidfVectorizer(max_features=1000, token_pattern=r'(?u)\\S\\S+') #maybe leave it as default later on\n",
     "\n",
-    "X_tfidf = vectorizer.fit_transform(X)"
+    "X1_tfidf = vectorizer_X1.fit_transform(X1)\n",
+    "\n",
+    "vectorizer_X2 = TfidfVectorizer(max_features=1000, token_pattern=r'(?u)\\S\\S+') #maybe leave it as default later on\n",
+    "\n",
+    "X2_tfidf = vectorizer_X2.fit_transform(X2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import hstack\n",
+    "\n",
+    "X_tfidf = hstack((X1_tfidf, X2_tfidf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,14 +1209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50533, 1000) (12634, 1000) (50533, 100) (12634, 100)\n"
+      "(50533, 2000) (12634, 2000) (50533, 100) (12634, 100)\n"
      ]
     }
    ],
@@ -1234,42 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaccard Similarity Score:  0.39991557173763914\n",
-      "ROC-AUC Score:  0.7138178201283213\n",
-      "Hamming Loss:  0.011098622763970238\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.multiclass import OneVsRestClassifier\n",
-    "from sklearn.metrics import jaccard_score, roc_auc_score, hamming_loss\n",
-    "\n",
-    "logreg_classifier = LogisticRegression(max_iter=1000, random_state = 42)\n",
-    "classifier = OneVsRestClassifier(logreg_classifier)\n",
-    "\n",
-    "classifier.fit(X_train,Y_train)\n",
-    "\n",
-    "Y_pred = classifier.predict(X_test)\n",
-    "\n",
-    "jaccard = jaccard_score(Y_test, Y_pred, average = 'samples')\n",
-    "print(\"Jaccard Similarity Score: \", jaccard * 100)\n",
-    "roc_auc = roc_auc_score(Y_test, Y_pred, average = 'samples')\n",
-    "print(\"ROC-AUC Score: \", roc_auc * 100)\n",
-    "hamming_loss_val = hamming_loss(Y_test, Y_pred)\n",
-    "print(\"Hamming Loss: \", hamming_loss_val * 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1277,24 +1234,21 @@
      "output_type": "stream",
      "text": [
       "Classifier:  LogisticRegression(max_iter=1000, random_state=42)\n",
-      "Jaccard Similarity Score:  39.991557173763916\n",
-      "ROC-AUC Score:  71.38178201283213\n",
-      "Hamming Loss:  1.1098622763970238\n",
-      "\n",
+      "Jaccard Similarity Score:  45.137459764656214\n",
+      "ROC-AUC Score:  74.20748861026848\n",
+      "Hamming Loss:  1.033560234288428\n",
       "\n",
       "\n",
       "Classifier:  MultinomialNB()\n",
-      "Jaccard Similarity Score:  12.679146219196873\n",
-      "ROC-AUC Score:  56.741412094668675\n",
-      "Hamming Loss:  1.4457812252651576\n",
-      "\n",
+      "Jaccard Similarity Score:  37.840294895859245\n",
+      "ROC-AUC Score:  71.95083930173146\n",
+      "Hamming Loss:  1.219724552794048\n",
       "\n",
       "\n",
       "Classifier:  LinearSVC()\n",
-      "Jaccard Similarity Score:  44.6092554482613\n",
-      "ROC-AUC Score:  73.93438208673385\n",
-      "Hamming Loss:  1.0656957416495172\n",
-      "\n",
+      "Jaccard Similarity Score:  49.275499973616164\n",
+      "ROC-AUC Score:  76.88835418514248\n",
+      "Hamming Loss:  1.0148804812410956\n",
       "\n",
       "\n"
      ]
